# pe_ep_intercept

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  ExeManager.sln  ExeManager.vcxproj  Main.cpp  PeAssembly.cpp  PeAssembly.hpp  PePatch.cpp  PePatch.hpp  PortableExecutablePatcher.vcxproj  README.md  run_build.sh  run_tests.sh
common/: Assembler.cpp  Assembler.hpp  Assembly.cpp  Assembly.hpp  Editor.cpp  Editor.hpp  PeFile.cpp  PeFile.hpp  PePatch.cpp  PePatch.hpp  PePatchX64.cpp  PePatchX64.hpp  PeStructs.hpp
include/: ntundoc.h
include/utils/: catch.hpp
source/: ExeManager.cpp  ExeManager.h  HelperProcs.asm  PortableExecutableEditor.cpp  PortableExecutableEditor.h  main.cpp
src/: CMakeLists.txt  Main.cpp  PeAssembly.cpp  PeAssembly.hpp  PeFile.cpp  PeFile.hpp  PePatch.cpp  PePatch.hpp  PePatchX64.cpp  PePatchX64.hpp  PePatchX86.cpp  PePatchX86.hpp  PeStructs.hpp
test_programs/: t2.cpp  t3.cpp
tests/: CMakeLists.txt  Main.cpp
